Added syntax higligther of code, fix #2.

--- a/slideshow.html
+++ b/slideshow.html
@@ -48,6 +48,23 @@
 </script>
 
 <script data-role="slide" type="text/html">
+<h1>Lorem Ipsum Dolor</h1>
+<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia.</p>
+</script>
+
+<script data-role="slide" type="text/html">
+<h1>Lorem Ipsum Dolor</h1>
+<ul>
+    <li>Consectetur adipisicing elit</li>
+</ul>
+
+<h2 class="left">Lorem Ipsum Dolor</h2>
+<ul>
+    <li>Consectetur adipisicing elit</li>
+</ul>
+</script>
+
+<script data-role="slide" type="text/html">
 </script>
 
 
