remake to add tests and move to travis, adding theme

--- a/slideshow.html
+++ b/slideshow.html
@@ -1,11 +1,10 @@
 <!doctype html>
+<html class="theme-1">
 <meta charset="utf-8" />
 <title>mithril-slides</title>
 
 <!-- Mithril HTML Slideshow styles -->
 <link href="css/mithril-slideshow.css" rel="stylesheet" />
-<link href="css/theme-dark.css" rel="alternate stylesheet" title="Dark"/>
-<link href="css/theme-light.css" rel="alternate stylesheet" title="Light" />
 
 <!-- Code formatting using highlight.js -->
 <link rel="stylesheet" href="css/default.css">
@@ -82,3 +81,5 @@
 <!-- include essential js-script -->
 <script src="js/mithril.min.js"></script>
 <script src="js/mithril-slideshow.js"></script>
+
+</html>
