Enable to add class to each slide.

--- a/slideshow.html
+++ b/slideshow.html
@@ -68,7 +68,7 @@
     <li>Consectetur adipisicing elit</li>
 </ul>
 
-<h2 class="left">Lorem Ipsum Dolor</h2>
+<h2>Lorem Ipsum Dolor</h2>
 <ul>
     <li>Consectetur adipisicing elit</li>
 </ul>
