--- a/htdocs/slideshow-sample.html
+++ b/htdocs/slideshow-sample.html
@@ -1,22 +1,14 @@
 <!doctype html>
 <html class="theme-1">
 <meta charset="utf-8" />
+
+<link href="css/slideshow-bundle.min.css" rel="stylesheet" />
+<script src="js/slideshow-bundle.min.js"></script>
+
 <title>mithril-slides</title>
 
-<!-- Mithril HTML Slideshow styles -->
-<link href="css/mithril-slideshow.css" rel="stylesheet" />
-
-<!-- Code formatting using highlight.js -->
-<link rel="stylesheet" href="css/default.css">
-<link rel="stylesheet" href="css/tomorrow.css">
-<script src="js/highlight.pack.js"></script>
-
-<!-- Text formatting using Markdown through showdown.js -->
-<script src="js/showdown.min.js"></script>
 
 
-
-<!-- Here comes the slides in order -->
 <script data-role="slide" type="text/html">
 <h1>Lorem Ipsum Dolor</h1>
 <h3>Duis aute irure</h3>
@@ -76,10 +68,3 @@
 
 <script data-role="slide" type="text/html">
 </script>
-
-
-<!-- include essential js-script -->
-<script src="js/mithril.min.js"></script>
-<script src="js/mithril-slideshow.js"></script>
-
-</html>
