--- a/htdocs/slideshow-use-bundle.html
+++ b/htdocs/slideshow-use-bundle.html
@@ -1,21 +1,12 @@
 <!doctype html>
 <meta charset="utf-8" />
-<title>mithril-slides</title>
+<link href="css/slideshow-bundle.min.css" rel="stylesheet" />
+<script src="js/slideshow-bundle.min.js"></script>
 
-<!-- Mithril HTML Slideshow styles -->
-<link href="css/mithril-slideshow.css" rel="stylesheet" />
-
-<!-- Code formatting using highlight.js -->
-<link rel="stylesheet" href="css/default.css">
-<link rel="stylesheet" href="css/tomorrow.css">
-<script src="js/highlight.pack.js"></script>
-
-<!-- Text formatting using Markdown through showdown.js -->
-<script src="js/showdown.min.js"></script>
+<title>mithril-slideshow</title>
 
 
 
-<!-- Here comes the slides in order -->
 <script data-role="slide" data-markdown type="text/html">
 #header 1
 ##header 2
@@ -69,6 +60,5 @@ paragraf 2
 
 
 
-<!-- include essential js-script -->
-<script src="js/mithril.min.js"></script>
-<script src="js/mithril-slideshow.js"></script>
+<script data-role="slide" data-markdown type="text/html">
+</script>
