--- a/htdocs/slideshow-markdown.html
+++ b/htdocs/slideshow-markdown.html
@@ -8,33 +8,45 @@
 
 
 <script data-role="slide" data-markdown type="text/html">
-#header 1
-##header 2
+# header 1
+## header 2
+### header 3
 
 paragraf 1
 
 paragraf 2
+
 </script>
 
 
 <script data-role="slide" data-markdown type="text/html">
-#Here is a bullet list
+# Here is a bullet list
 
-* bullet
 * bullet
 * another bullet
+* the third bullet
+
 </script>
 
 
 
 <script data-role="slide" data-markdown type="text/html">
-#Here is a ordered list
+# Here is a ordered list
 
 1. item
 1. item
 1. another item
 </script>
 
+
+
+<script data-role="slide" data-markdown type="text/html">
+# header 1
+
+paragraf 1
+
+paragraf 2
+</script>
 
 
 <script data-role="slide" data-markdown type="text/html">
