Change name of repo

--- a/htdocs/slideshow-markdown.html
+++ b/htdocs/slideshow-markdown.html
@@ -52,17 +52,17 @@ paragraf 2
 <script data-role="slide" data-markdown type="text/html">
 #Here is a table
 
-| What | Where |
-|------|-------|
+| What  | Where  |
+|-------|--------|
 | Apple | Sweden |
-| Pear  | Sweden |
+| Pear  | Norway |
 
 </script>
 
 
 
 <script data-role="slide" data-markdown type="text/html">
-#Here is code
+# Here is code
 
 ```
 <?php echo "Hello world"; ?>
