--- a/htdocs/slideshow.html
+++ b/htdocs/slideshow.html
@@ -3,7 +3,7 @@
 <link href="css/slideshow-bundle.min.css" rel="stylesheet" />
 <script src="js/slideshow-bundle.min.js"></script>
 
-<title>mithril-slides</title>
+<title>html-slides</title>
 
 
 
