--- a/htdocs/cdn_v1.1.0.html
+++ b/htdocs/cdn_v1.1.0.html
@@ -1,9 +1,17 @@
 <!doctype html>
 <meta charset="utf-8" />
-<link href="css/slideshow-bundle.min.css" rel="stylesheet" />
-<script src="js/slideshow-bundle.min.js"></script>
+<link href="https://dbwebb.se/cdn/css/html-slideshow_v1.1.0.bundle.min.css" rel="stylesheet" />
+<script src="https://dbwebb.se/cdn/js/html-slideshow_v1.1.0.bundle.min.js"></script>
 
-<title>mithril-slides</title>
+<title>html-slides</title>
+
+
+
+<script data-role="slide" data-markdown type="text/html">
+
+This slideshow is created using Markdown and uses the CDN to load the css/js files needed.
+
+</script>
 
 
 
